deployment/shareit-app/02-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: shareit-svc
  labels:
    app.kubernetes.io/name: shareit-app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: shareit-app
  type: ClusterIP
