deployment/shareit-app/03-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shareit-ingress
  annotations:
    kubernetes.io/ingress.class: caddy
  labels:
    app.kubernetes.io/name: shareit-app
    app.kubernetes.io/version: $SHAREIT_DEPLOYMENT_VERSION
spec:
  rules:
    - host: $SHAREIT_DEPLOYMENT_FQDN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shareit-svc
                port:
                  number: 80
